--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "modern-almanac-app",
   "private": true,
@@ -14,8 +13,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@vercel/node": "^3.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2",
     "vite": "^6.0.0"
